# closest_compound

./: README.md  main.py  pyproject.toml  requirements.txt  test_basic.py
artifacts/: meta.pkl  mol2vec.index
scripts/: build_index.py  nearest.py
src/: index_builder.py  query.py  utils.py
